provided more logging